# humanity-check

./: .gitignore  LICENSE  Makefile  README.md  json_data.json  pyproject.toml  requirements.txt
data/: Keywords-Reddit.txt  data.jsonl  keywords_query_media_cloud.txt
data/UK/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+1358 more)
data/lexicons/: ALL_framenet_frames.txt  custom-lexicon-action-verbs.txt  framenet_visible_effects.txt  visible_effects.txt
data/outputs/: topic_info_min50.csv
docs/: Makefile  conf.py  index.rst
humanity_check/: setup.py
humanity_check/docs/: make.bat
lexicons/: custom-lexicon-physical-consequences-war.txt  custom-lexicon.txt  framenet_invisible_effects.txt
notebooks/: Filtering.ipynb  NER.ipynb  Output Analysis.ipynb  data_exploration.ipynb  frame_semantics.ipynb  ner_plus_dependency_parsing.ipynb  semantic-frames.ipynb  topic-modelling-LDA.ipynb  topic_modelling_lda_gensim.ipynb
notebooks/Visible-Effects-of-War/: graph.csv  visible_effects.ipynb  visible_effects_ME.ipynb
src/: test.py
src/data/: make_dataset.py
src/data_extraction/: media_cloud_scraper.py  read_file.py  scraper.py
src/models/: frame_annotate.py  frame_semantics.py  ner.py  pos.py  (+3 more)
(+3 files in other folders)
