[tool.poetry]
name = "humanity-check"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
news-please = "^1.5.44"
pandas = "^2.1.4"
bertopic= "^0.16.0"
sentencepiece = "^0.1.98"
frame-semantic-transformer = "^0.10.0"
nltk = "^3.8.1"
spacy = "^3.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
